@@ -35,7 +35,7 @@ xmag_SOURCES =	\
         ScaleP.h \
         xmag.c
 
-appman_SOURCES = \
+appman_PRE = \
         xmag.man
 
 # App default files  (*.ad)
@@ -64,9 +64,9 @@ EXTRA_DIST += xmag.icon
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
